# gmtk-2022

./: .gitignore  Bomb.cpp  Bomb.h  CMakeLists.txt  Enemy.cpp  Enemy.h  Main.cpp  Map.cpp  Map.h  Player.cpp  Player.h  README.md  Shader.cpp  Shader.h  Texture.cpp  Texture.h
res/shaders/: simple-frag.glsl  simple-vert.glsl
